--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,28 @@
                 android:text="@string/action_go"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/textOutputLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="@string/default_output_text_label"
+                android:inputType="text"
+                android:minLines="1"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                />
+
+            <TextView
+                android:id="@+id/textOutput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="false"
+                android:text="@string/default_output_text"
+                android:inputType="textMultiLine"
+                android:minLines="2"
+                />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
